@@ -185,6 +185,10 @@ MA 02110-1301, USA.</p>
 <hr />
 <h1><a name="history">HISTORY</a></h1>
 <pre>
+ 0.08.02 2013-10-03 Kai Ellinger &lt;coding@blicke.de&gt;
+      Fixed bin/fritzuploader.pl in order to work with new Fritzbox firmware versions 
+       See: https://github.com/jpmens/fritzuploader/issues/1</pre>
+<pre>
  0.08.01 2011-05-05 Kai Ellinger &lt;coding@blicke.de&gt;
        Documentation:
        - Finished API docs
