@@ -132,7 +132,7 @@
 .\" ========================================================================
 .\"
 .IX Title "EGW2FBOX 1"
-.TH EGW2FBOX 1 "2013-03-27" "perl v5.10.0" "User Contributed Perl Documentation"
+.TH EGW2FBOX 1 "2013-10-03" "perl v5.10.0" "User Contributed Perl Documentation"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -217,7 +217,11 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 \&\s-1MA\s0 02110\-1301, \s-1USA\s0.
 .SH "HISTORY"
 .IX Header "HISTORY"
-.Vb 5
+.Vb 3
+\& 0.08.02 2013\-10\-03 Kai Ellinger <coding@blicke.de>
+\&      Fixed bin/fritzuploader.pl in order to work with new Fritzbox firmware versions 
+\&       See: https://github.com/jpmens/fritzuploader/issues/1
+\&
 \& 0.08.01 2011\-05\-05 Kai Ellinger <coding@blicke.de>
 \&       Documentation:
 \&       \- Finished API docs
