@@ -2,6 +2,10 @@ Name:
     egw2fbox.pl
 
 History:
+                                      0.08.02 2013-10-03 Kai Ellinger <coding@blicke.de>
+                                           Fixed bin/fritzuploader.pl in order to work with new Fritzbox firmware versions 
+                                            See: https://github.com/jpmens/fritzuploader/issues/1
+
                                       0.08.01 2011-05-05 Kai Ellinger <coding@blicke.de>
                                             Documentation:
                                             - Finished API docs
